Install+Set geolocation module

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "16.8.3",
     "react-native": "0.59.8",
+    "react-native-geolocation-service": "^2.0.1",
     "react-native-gesture-handler": "^1.2.1",
     "react-navigation": "^3.11.0"
   },
