--- a/ios/skycloset/Info.plist
+++ b/ios/skycloset/Info.plist
@@ -57,6 +57,7 @@
 	<array>
 		<string>LogoENG-Medium.otf</string>
 		<string>LogoKOR-Medium.otf</string>
+		<string>Bongodik-Medium.otf</string>
 	</array>
 </dict>
 </plist>
