--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,9 +138,12 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-linear-gradient')
     
     implementation project(':react-native-geolocation-service')
     implementation project(':react-native-gesture-handler')
+    implementation project(':react-native-linear-gradient')
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
