--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native-linear-gradient": "^2.5.4",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.0.3",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "ws": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
