공유기능 추가 및 잡일  - getDustInfo.js, getWeatherInfo.js 까먹고 안 옮겼었음.. 마저 옮기고 src/functions 폴더 삭제함  - getDustInfo, getWeatherInfo module에 Imoticon 반환하는 함수 추가  - 공유 기능 추가 완료 (미완성 ver)  - 부족한 점 : 1. 앱다운로드링크 추가필요, 2. 아이콘 변경 필요  - npm run android 명령어 입력시 metro bundler가 실행되지 않던 문제 해결  - cleartextTrafficPermitted 설정에서 localhost를 허용해주지 않았던게 문제였음  - 앱 첫 실행시 스플래쉬 애니메이션, data fetch가 모두 작동하지 않던 문제 해결  - LocalPermission 이후 getLocation부분을 then을 사용해서 제대로  비동기적으로 바꿈.  - 느린 네트워크 환경에서 일부 data가 제대로 fetch되지 않는 문제 해결  - fetch_retry 함수를 생성해 10번까지 재시도하도록 했음.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "android": "react-native run-android"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.4.2",
     "react": "16.8.3",
     "react-native": "^0.59.9",
     "react-native-drawer": "^2.5.1",
