짱 많이 수정/추가함  - BonGodik-Regular 폰트 추가. 일부 text에 적용  - AppIcon squre, round 버전 추가  - 여러 style적인 인자들(margin, padding등등) 수정  - closet에서 bar로 수정  - 시간별 HomeScreen 배경색 수정  - WeatherInfo Box에 독립적인 배경색 추가

--- a/ios/skycloset/Info.plist
+++ b/ios/skycloset/Info.plist
@@ -58,6 +58,7 @@
 		<string>LogoENG-Medium.otf</string>
 		<string>LogoKOR-Medium.otf</string>
 		<string>Bongodik-Medium.otf</string>
+		<string>BonGodik-Regular.otf</string>
 	</array>
 </dict>
 </plist>
