--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -150,6 +150,7 @@ android {
 }
 
 dependencies {
+    implementation project(':lottie-react-native')
     implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-linear-gradient')
     
