Add data.js + somethings  - for demoday showcase : can change hours manually  - add comment to example files  - Mini,WeeklyWeather의 bgColor가 HomeScreen에서 prop으로 전달되도록 바꿈

--- a/config/keys.js.example
+++ b/config/keys.js.example
@@ -3,3 +3,5 @@ export const darkSkyKey = '********'
 export const sgisKey_ID = '********' 
 export const sgisKey_SECRET = '********' 
 export const airkoreaKey = '********' 
+
+// Fill up with your own api key.
