Circlize gender choice buttons, Fix data loading  - 데이터 로딩이 animation보다 느리면 toast 메세지를 띄우고 2.5초를 더 기다리도록 변경  - SplashScreen의 성별선택버튼 동그랗게 바꿈, 시작하기 버튼 없앰  - 성별 순서 남자여자에서 여자남자로 변경

--- a/config/keys.js.example
+++ b/config/keys.js.example
@@ -4,4 +4,6 @@ export const sgisKey_ID = '********'
 export const sgisKey_SECRET = '********' 
 export const airkoreaKey = '********' 
 
+export const dev_passwd = '********'
+export const unitId = '********'
 // Fill up with your own api key.
