--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,10 +11,11 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://dl.bintray.com/android/android-tools' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.1'
-
+        //classpath 'com.google.gms:google-services:4.2.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
