--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lottie-react-native": "^2.6.1",
     "react": "16.8.3",
     "react-native": "^0.59.9",
+    "react-native-dialog-input": "^1.0.7",
     "react-native-drawer": "^2.5.1",
+    "react-native-firebase": "^5.4.3",
     "react-native-geolocation-service": "^2.0.1",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-linear-gradient": "^2.5.4",
