Update manythings  - lottie-react-native 삭제해버림  - 상세날씨 animation 구현완료 :: 다른 기기에서 layout 버그 있음!!  - GeoScreen 틀은 다 잡아놓음. 기능 구현 필요 - getBgColor내에서 getGeoBgColor 함수 추가  - 갤럭시s10에서 주간예보차트 text 줄바꿈현상 해결  - DetailScreen 일부분 구현완료 - 이를 위해 getDustInfo내에 getPmColor 함수추가

--- a/config/keys.js.example
+++ b/config/keys.js.example
@@ -1,5 +1,6 @@
 export const googleMapsKey = '********' 
 export const darkSkyKey = '********' 
+export const darkSkyKey2 = '********' 
 export const sgisKey_ID = '********' 
 export const sgisKey_SECRET = '********' 
 export const airkoreaKey = '********' 
