--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -150,8 +150,8 @@ android {
 }
 
 dependencies {
+    //implementation project(':react-native-admob')
     //implementation project(':react-native-firebase')
-    implementation project(':lottie-react-native')
     implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-linear-gradient')
     
